css/customsim.css
html, body {
  height: 100%;
  width: 100%;
}

body {
  position: relative;
}

.navbar {
	margin-bottom: 0;
  text-align: center;
  width: 100%;
  font-family: 'Overpass', sans-serif;
}

.navbar-brand {
  font-family: 'Rock Salt', cursive;
  font-size: 30px;
}

#home {
  height: 100%;
  background-image: url(../images/beach.jpg);
  background-position: center center;
  background-size: cover; 
}

#background_caption {
	  font-family: 'Permanent Marker', cursive;
    position: absolute;
    font-size: 70px;
    color: white;
    top: 100px;
    left: 100px;
    display: none;
}

#whoami {
	background-color: #FFFFFF;
}

#whoami_header, #projects_header, #social_header {
	text-align: center;
  font-family: 'Permanent Marker', cursive;
  padding-top: 15px;
}

a:hover, a:visited, a:link, a:active {
    text-decoration: none;
}

a:active, a:visited {
  color: #691DED;
}

a:hover {
  color: #FF1493;
}

#whoami p {
  font-family: 'Overpass', sans-serif;
  padding: 30px;
  text-align: center;
  font-size: large;
}

#projects {
	background-color: #FFFFFF;
  margin-bottom: 10px;
}

#projects h3 {
	padding-left: 20px;
}

#projects img {
  width: auto;
  height: 300px;
	padding: 15px;
}

.hovereffect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
  cursor: default;
}

.hovereffect .overlay {
  position: absolute;
  overflow: hidden;
  width: 80%;
  height: 80%;
  left: 10%;
  top: 10%;
  border-bottom: 1px solid #FFF;
  border-top: 1px solid #FFF;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
}

.hovereffect:hover .overlay {
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.hovereffect img {
  display: block;
  position: relative;
  -webkit-transition: all 0.35s;
  transition: all 0.35s;
}

.hovereffect:hover img {
  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
  filter: brightness(0.6);
  -webkit-filter: brightness(0.6);
  filter: blur(3px);
   -webkit-filter: blur(3px);
   filter: brightness(30%);
}

.hovereffect h2 {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-size: 25px;
  background-color: transparent;
  color: #FFF;
  padding: 1em 0;
  opacity: 0;
  filter: alpha(opacity=0);
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.hovereffect a, hovereffect p {
  color: #FFF;
  padding: 1em 0;
  opacity: 0;
  filter: alpha(opacity=0);
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.overlay p {
  color: white;
}

.overlay a {
   color: #FF1493;
}

.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.social_icons {
  text-align: center;
  vertical-align: middle;
  margin-bottom: 10px;
}

.icon {
  display: inline-block;
  padding: 20px;
}

.fa {
  color: black;
}

.fa:hover {
  color: #FF1493;
}

footer {
  background-color: black;
  text-align: center;
}

footer p {
  font-family: Helvetica;
  color: white;
  margin-bottom: 0;
}

